[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "win32more"
version = "0.5.3"
description = "Python bindings for Windows API"
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    { name = "Yukihiro Nakadaira", email = "yukihiro.nakadaira@gmail.com" },
]
dependencies = [
    "typing_extensions; python_version < '3.9'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/ynkdir/py-win32more"

[tool.hatch.build]
only-include = ["win32more"]

[tool.hatch.envs.default]
dependencies = [
    "mypy",
]

[tool.hatch.envs.default.scripts]
typing = "mypy {args}"

[[tool.hatch.envs.hatch-test.matrix]]
python = [
    "3.13-64",
    "3.13-32",
    "3.12-64",
    "3.12-32",
    "3.11-64",
    "3.11-32",
    "3.10-64",
    "3.10-32",
    "3.9-64",
    "3.9-32",
    "3.8-64",
    "3.8-32",
]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "I"]

