[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "win32more"
version = "0.5.10"
description = "Python bindings for Windows API"
readme = "README.md"
requires-python = ">= 3.9"
authors = [
    { name = "Yukihiro Nakadaira", email = "yukihiro.nakadaira@gmail.com" },
]
dependencies = [
    "typing_extensions; python_version < '3.9'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/ynkdir/py-win32more"

[tool.hatch.build]
only-include = ["win32more"]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "I"]

