[project]
name = "win32more"
version = "0.6.0"
description = "Python bindings for Windows API"
readme = "README.md"
requires-python = ">= 3.9"
authors = [
    { name = "Yukihiro Nakadaira", email = "yukihiro.nakadaira@gmail.com" },
]
dependencies = [
    "typing_extensions; python_version < '3.9'",
    "win32more-Microsoft.Windows.SDK.Win32Metadata == 0.6.*",
    "win32more-Microsoft.Windows.SDK.Contracts == 0.6.*",
    "win32more-Microsoft.WindowsAppSDK == 0.6.*",
    "win32more-Microsoft.Web.WebView2 == 0.6.*",
    "win32more-Microsoft.Graphics.Win2D == 0.6.*",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/ynkdir/py-win32more"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/win32more"]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "I"]

